# plasmoide-diccionario

./: CMakeLists.txt  COPYING  ChangeLog  README.md  plasmoide-diccionario.spec
package/: metadata.desktop
package/contents/ui/: main.qml
